Implemented greedy parameters (#98)
* implemented greedy parameters

* formatting

* test

* Made CI run

* Made CI run

* Java version

* Cleanup